# dota-fetcher-be-rs

./: Cargo.toml  README.md
config/: cors_config.json
src/: api.rs  constants.rs  main.rs  structs.rs  traits.rs
src/api/: dotafetcher.rs
src/constants/: appsettings.rs
src/structs/: appsettings_struct.rs  command_result_struct.rs  commands_struct.rs  cors_struct.rs  matches_struct.rs
src/traits/: command_result_traits.rs
